<resources>
    <string name="ifl_a5_10">Permission Denied</string>
    <string name="ifl_a5_11">"Instafel's notification permission was denied. If this problem persists, do not forget to turn on notifications from the application settings."</string>
    <string name="ifl_a0_08">Miscellaneous</string>
    <string name="ifl_a0_09">Amoled Theme</string>
    <string name="ifl_a0_10">Enable amoled theme for Instafel activities, dialogs and other parts.</string>
    <string name="ifl_a0_11">Remove Ads</string>
    <string name="ifl_a0_12">Removes ads displayed in the feed, reels, or other places.</string>
    <string name="ifl_a0_13">Restart app for apply changes.</string>
    <string name="ifl_a0_14">Enabled by default, cannot be changed.</string>
    <string name="ifl_a0_15">Instafel Updater</string>
    <string name="ifl_a0_16">Use Instafel Updater for automatic updates with Root and Shizuku</string>
    <string name="ifl_version" translatable="false">_version</string>
    <string name="ifl_installation_type" translatable="false">_type</string>
    <string name="ifl_ig_version" translatable="false">_igversion</string>
    <string name="ifl_ig_vercode" translatable="false">_igvercode</string>
    <string name="ifl_ig_channel" translatable="false">ALPHA</string>
    <string name="ifl_ig_arch" translatable="false">_igarch</string>
    <string name="ifl_genid" translatable="false">_iflgenid</string>
    <string name="ifl_a0_02">Update Settings</string>
    <string name="ifl_a0_03">Language</string>
    <string name="ifl_a0_04">Library</string>
    <string name="ifl_a0_05">About</string>
    <string name="ifl_a0_06">This feature has not been added yet</string>
    <string name="ifl_a0_07">Crash Reports</string>
    <string name="ifl_a1_01">About Instafel</string>
    <string name="ifl_a1_02">Instafel Version</string>
    <string name="ifl_a1_03">Installation Type</string>
    <string name="ifl_a1_04">Project</string>
    <string name="ifl_a1_05">Developer</string>
    <string name="ifl_a1_06">Everyone that contributed to this project</string>
    <string name="ifl_a1_07">Clone</string>
    <string name="ifl_a1_08">Unclone</string>
    <string name="ifl_a1_09">Generation ID</string>
    <string name="ifl_a1_10">Instagram Version</string>
    <string name="ifl_a1_11">Contributors to the translation of Instafel</string>
    <string name="ifl_a2_01">About Instagram</string>
    <string name="ifl_a2_02">Version</string>
    <string name="ifl_a2_03">Version Code</string>
    <string name="ifl_a2_04">Channel</string>
    <string name="ifl_a2_05">Architecture</string>
    <string name="ifl_a3_01">About</string>
    <string name="ifl_a4_01">Export</string>
    <string name="ifl_a4_02">Import</string>
    <string name="ifl_a4_03">Delete Overrides File</string>
    <string name="ifl_a4_04">Please to save choose a file path.</string>
    <string name="ifl_a4_05">Backup file successfully saved.</string>
    <string name="ifl_a4_06">Overrides file not found.</string>
    <string name="ifl_a4_07">An error was encountered while saving the backup file.</string>
    <string name="ifl_a4_08">Share Backup File</string>
    <string name="ifl_a4_09">Please select a file for import.</string>
    <string name="ifl_a4_10">Backup file successfully imported.</string>
    <string name="ifl_a4_11">Overrides file not found.</string>
    <string name="ifl_a4_12">An error was encountered while importing the backup file.</string>
    <string name="ifl_a4_13">Overrides file successfully deleted.</string>
    <string name="ifl_a4_14">Overrides file not found.</string>
    <string name="ifl_a4_15">An error was encountered while importing the backup file.</string>
    <string name="ifl_a4_16">MobileConfig Editor</string>
    <string name="ifl_a4_17">Flag Analyzer</string>
    <string name="ifl_a4_18">Import Full</string>
    <string name="ifl_a4_19">Import with Merge</string>
    <string name="ifl_a4_20">Analyze Result</string>
    <string name="ifl_a4_21">Use Custom Mapping File</string>
    <string name="ifl_a4_22">Allows you to analyze with a custom mapping file instead of Instagram\'s default mapping file</string>
    <string name="ifl_a4_23">Matched Flags</string>
    <string name="ifl_a4_24">Mismatched Flags</string>
    <string name="ifl_a4_25">Search</string>
    <string name="ifl_a4_26">Import Overrides from Backup</string>
    <string name="ifl_a4_27">Use a backup file instead of analyzing existing override file</string>
    <string name="ifl_a4_28">Start Analysis</string>
    <string name="ifl_a4_29">Start Analysis with Custom Backup</string>
    <string name="ifl_a4_30">Start Analysis with Custom Mapping</string>
    <string name="ifl_a4_31">Start Analysis with Custom Backup and Mapping</string>
    <string name="ifl_a4_32">Copy Raw Mapping</string>
    <string name="ifl_a4_33">Copy Parsed Mapping</string>
    <string name="ifl_a4_34">Override file missing or corrupt</string>
    <string name="ifl_a4_35">Are you sure?</string>
    <string name="ifl_a4_36">There is no way to recover deleted override file</string>
    <string name="ifl_a4_37">Okay</string>
    <string name="ifl_a4_38">Cancel</string>
    <string name="ifl_a4_39">Error while reading override file.</string>
    <string name="ifl_a4_40">%1$s flags successfully exported</string>
    <string name="ifl_a4_41">Error while writing content into backup file.</string>
    <string name="ifl_a4_42">Error while exporting backup file</string>
    <string name="ifl_a5_01">Check for Updates</string>
    <string name="ifl_a5_02">Last check: %1$s</string>
    <string name="ifl_a5_03">Check Frequency</string>
    <string name="ifl_a5_05">Never</string>
    <string name="ifl_a5_06">Enable Updates</string>
    <string name="ifl_a5_07">Enable Update Settings</string>
    <string name="ifl_a5_08">Background Download</string>
    <string name="ifl_a5_09">A notification is sent after updates downloaded in the background</string>
    <string name="ifl_a5_sub_freq_00">Set to every opening.</string>
    <string name="ifl_a5_sub_freq_01">Set to never</string>
    <string name="ifl_a5_sub_freq_02">Set to every day</string>
    <string name="ifl_a5_sub_freq_03">Set to once in three days</string>
    <string name="ifl_a5_sub_freq_04">Set to once in five days</string>
    <string name="ifl_a5_sub_freq_05">Set to once a week</string>
    <string name="ifl_a5_dia_freq_00">Every Opening (default)</string>
    <string name="ifl_a5_dia_freq_01">Never</string>
    <string name="ifl_a5_dia_freq_02">Every day</string>
    <string name="ifl_a5_dia_freq_03">Once in three days</string>
    <string name="ifl_a5_dia_freq_04">Once in five days</string>
    <string name="ifl_a5_dia_freq_05">Once a week</string>
    <string name="ifl_a6_01">Use Device Language</string>
    <string name="ifl_a7_01">Reports</string>
    <string name="ifl_a7_02">Delete Reports</string>
    <string name="ifl_a8_01">Details</string>
    <string name="ifl_a8_02">Copy Log</string>
    <string name="ifl_a8_03">Share Log</string>
    <string name="ifl_a8_04">Device Info</string>
    <string name="ifl_a8_05">Android Version</string>
    <string name="ifl_a8_06">IG and IFL Version</string>
    <string name="ifl_a8_07">Crash Date</string>
    <string name="ifl_a8_08">Crash Info</string>
    <string name="ifl_a8_09">Reason</string>
    <string name="ifl_a8_10">Stack Trace</string>
    <string name="ifl_a9_01">Details</string>
    <string name="ifl_a10_01">Contributors</string>
    <string name="ifl_a10_02">Translators</string>
    <string name="ifl_a11_01">Flag Library</string>
    <string name="ifl_a11_02">Backup Library</string>
    <string name="ifl_a11_03">Error while getting backups from API</string>
    <string name="ifl_a11_04">Created by %1$s</string>
    <string name="ifl_a11_05">Backup Info</string>
    <string name="ifl_a11_06">Name</string>
    <string name="ifl_a11_07">Description</string>
    <string name="ifl_a11_08">Last Updated</string>
    <string name="ifl_a11_09">Changelog</string>
    <string name="ifl_a11_10">Apply Backup</string>
    <string name="ifl_a11_11">More</string>
    <string name="ifl_a11_12">Enable Auto Update</string>
    <string name="ifl_a11_13">If new update released for your backup, backup will updated automatically</string>
    <string name="ifl_a11_14">This backup will be applied for now and will be updated if auto update enabled</string>
    <string name="ifl_a11_15">Backups</string>
    <string name="ifl_a11_16">About Author</string>
    <string name="ifl_a11_17">Error while fetching backup information</string>
    <string name="ifl_a11_18">Updated to v%1$s on %2$s</string>
    <string name="ifl_a11_19">About Author</string>
    <string name="ifl_a11_20">Author Name</string>
    <string name="ifl_a11_21">Error while fetching author about info</string>
    <string name="ifl_a11_22">Error while downloading backup file</string>
    <string name="ifl_a11_23">To enable this setting, you need to apply at least one backup from library</string>
    <string name="ifl_a11_24">%1$s backup will now be updated automatically</string>
    <string name="ifl_a11_25">Auto update disabled</string>
    <string name="ifl_a11_26">Error while updating backup</string>
    <string name="ifl_a11_27">Backup Changelog</string>
    <string name="ifl_a11_28">Restart App</string>
    <string name="ifl_a11_29">Restart Later</string>
    <string name="ifl_a11_30">Error while parsing backup file</string>
    <string name="ifl_a11_31">Error while parsing mapping file</string>
    <string name="ifl_a11_32">Error while reading Instagram\'s mapping file</string>
    <string name="ifl_a11_33">Error while parsing override file</string>
    <string name="ifl_a11_34">Mapping file not found</string>
    <string name="ifl_a11_35">Error while comparing backup with mapping</string>
    <string name="ifl_a11_36">Error while copying flag content</string>
    <string name="ifl_a11_37">Error while starting analyze</string>
    <string name="ifl_a11_38">Please select a file</string>
    <string name="ifl_a11_39">Error while reading backup file</string>
    <string name="ifl_a11_40">Error while reading mapping file</string>
    <string name="ifl_a11_41">%1$s flag imported from backup file</string>
    <string name="ifl_a11_42">Error while importing overrides from backup file</string>
    <string name="ifl_a11_43">%1$s flag succesfully imported</string>
    <string name="ifl_a11_44">%1$s succesfully imported</string>
    <string name="ifl_a0_01">Backup Options</string>
    <string name="ifl_a11_45">Version</string>
    <string name="ifl_a11_46">%1$s succesfully imported with %2$s flag</string>
    <string name="ifl_a11_47">Please select an valid backup file</string>
    <string name="ifl_a11_48">Import Old Backups</string>
    <string name="ifl_a11_49">Please fill the required fields.</string>
    <string name="ifl_a11_50">Please enter valid version name</string>
    <string name="ifl_a11_51">Export Backup</string>
    <string name="ifl_a11_52">Backup Name</string>
    <string name="ifl_a11_53">"Like Mami's Perfect Backup"</string>
    <string name="ifl_a11_54">Author Name</string>
    <string name="ifl_a11_55">Like Albert Einstein</string>
    <string name="ifl_a11_56">Backup Version</string>
    <string name="ifl_a11_57">Like 1.0, 1.0-hotfix etc.</string>
    <string name="ifl_a11_58">Changelog</string>
    <string name="ifl_a11_59">You can write here the backup changelog</string>
    <string name="ifl_a11_60">Export Backup</string>
    <string name="ifl_a11_61">Import Old JSON Backups</string>
    <string name="ifl_a11_62">Backup Comparator</string>
    <string name="ifl_a11_63">Used to import a backup file completely with all flags in file</string>
    <string name="ifl_a11_64">Adds flags to the backup file you use that are not in the backup you selected.</string>
    <string name="ifl_a11_65">You can import old .json type backups with this option</string>
</resources>