<?xml version="1.0" encoding="utf-8"?>
<me.mamiiblt.instafel.ui.Page
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mamiiblt.instafel.activity.ifl_a_ota">

    <me.mamiiblt.instafel.ui.PageTitle
        android:id="@+id/ifl_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ifl_attr_ui_titleText="@string/ifl_a0_02" />

    <me.mamiiblt.instafel.ui.PageContentArea
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifl_page_title">

        <me.mamiiblt.instafel.ui.TileLargeSwitch
            android:id="@+id/ifl_tile_ota_enable_updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_enable_updates"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a5_07"
            app:ifl_attr_ui_titleText="@string/ifl_a5_06" />

        <me.mamiiblt.instafel.ui.TileLargeSwitch
            android:id="@+id/ifl_tile_ota_background_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_notifications"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a5_09"
            app:ifl_attr_ui_titleText="@string/ifl_a5_08" />

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_ota_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_ota_refresh"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a5_02"
            app:ifl_attr_ui_titleText="@string/ifl_a5_01" />

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_ota_freq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_check_frequency"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_enableSubIcon="visible"
            app:ifl_attr_ui_subIconRes="@drawable/ifl_ota_expand"
            app:ifl_attr_ui_iconPadding="3"
            app:ifl_attr_ui_subtitleText="_empty"
            app:ifl_attr_ui_titleText="@string/ifl_a5_03" />

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_ota_instafel_updater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_backup_export"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_enableSubIcon="visible"
            app:ifl_attr_ui_subIconRes="@drawable/ifl_open_in_browser"
            app:ifl_attr_ui_iconPadding="3"
            app:ifl_attr_ui_subtitleText="@string/ifl_a0_16"
            app:ifl_attr_ui_titleText="@string/ifl_a0_15" />

    </me.mamiiblt.instafel.ui.PageContentArea>
</me.mamiiblt.instafel.ui.Page>