<?xml version="1.0" encoding="utf-8"?>
<me.mamiiblt.instafel.ui.Page
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mamiiblt.instafel.activity.devmode.ifl_a_devmode">

    <me.mamiiblt.instafel.ui.PageTitle
        android:id="@+id/ifl_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ifl_attr_ui_titleText="@string/ifl_a4_02" />

    <me.mamiiblt.instafel.ui.PageContentArea
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifl_page_title">

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_import_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_backup_import"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a11_63"
            app:ifl_attr_ui_titleText="@string/ifl_a4_18" />

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_import_merge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_backup_import"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a11_64"
            app:ifl_attr_ui_titleText="@string/ifl_a4_19" />

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_import_old_backups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_backup_import"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a11_65"
            app:ifl_attr_ui_titleText="@string/ifl_a11_61" />

    </me.mamiiblt.instafel.ui.PageContentArea>
</me.mamiiblt.instafel.ui.Page>