<?xml version="1.0" encoding="utf-8"?>
<me.mamiiblt.instafel.ui.Page
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mamiiblt.instafel.activity.devmode.ifl_a_devmode">

    <me.mamiiblt.instafel.ui.PageTitle
        android:id="@+id/ifl_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ifl_attr_ui_titleText="@string/ifl_a11_51" />

    <me.mamiiblt.instafel.ui.PageContentArea
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifl_page_title">

        <me.mamiiblt.instafel.ui.TileLargeEditText
            android:id="@+id/ifl_tile_export_backup_name"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_filename"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a11_53"
            app:ifl_attr_ui_titleText="@string/ifl_a11_52" />

        <me.mamiiblt.instafel.ui.TileLargeEditText
            android:id="@+id/ifl_tile_export_author_name"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_author"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a11_55"
            app:ifl_attr_ui_titleText="@string/ifl_a11_54" />

        <me.mamiiblt.instafel.ui.TileLargeEditText
            android:id="@+id/ifl_tile_export_backup_version"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_version"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a11_57"
            app:ifl_attr_ui_titleText="@string/ifl_a11_56" />
        <me.mamiiblt.instafel.ui.TileLargeEditText
            android:id="@+id/ifl_tile_export_backup_changelog"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_changelog"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="@string/ifl_a11_59"
            app:ifl_attr_ui_titleText="@string/ifl_a11_58" />
    </me.mamiiblt.instafel.ui.PageContentArea>

    <LinearLayout
        android:id="@+id/ifl_button_exportbackup"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ifl_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/ifl_text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/ifl_a11_60"
            android:textAlignment="center"
            android:textColor="?ifl_attr_subtitle_color" />
    </LinearLayout>
</me.mamiiblt.instafel.ui.Page>