<?xml version="1.0" encoding="utf-8"?>
<me.mamiiblt.instafel.ui.Page android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <me.mamiiblt.instafel.ui.PageTitle android:id="@+id/ifl_page_title" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_titleText="@string/ifl_a0_08" />
    <me.mamiiblt.instafel.ui.PageContentArea android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/ifl_page_title">
        <me.mamiiblt.instafel.ui.TileLargeSwitch android:id="@+id/ifl_tile_misc_amoled" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_iconRes="@drawable/ifl_amoled_theme" app:ifl_attr_ui_spaceBottom="visible" app:ifl_attr_ui_subtitleText="@string/ifl_a0_10" app:ifl_attr_ui_titleText="@string/ifl_a0_09" />
        <me.mamiiblt.instafel.ui.TileLargeSwitch android:id="@+id/ifl_tile_remove_ads_section" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_iconRes="@drawable/ifl_remove_ads" app:ifl_attr_ui_spaceBottom="visible" app:ifl_attr_ui_subtitleText="@string/ifl_a0_12" app:ifl_attr_ui_titleText="@string/ifl_a0_11" />

    </me.mamiiblt.instafel.ui.PageContentArea>
</me.mamiiblt.instafel.ui.Page>