<?xml version="1.0" encoding="utf-8"?>
<me.mamiiblt.instafel.ui.Page android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <me.mamiiblt.instafel.ui.PageTitle android:id="@id/ifl_page_title" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_titleText="@string/ifl_a1_01" />
    <me.mamiiblt.instafel.ui.PageContentArea android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/ifl_page_title">
        <me.mamiiblt.instafel.ui.TileLarge android:id="@+id/ifl_tile_ifl_version" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_iconRes="@drawable/ifl_instafel" app:ifl_attr_ui_spaceBottom="visible" app:ifl_attr_ui_subtitleText="instafelVersion" app:ifl_attr_ui_titleText="@string/ifl_a1_02" />
        <me.mamiiblt.instafel.ui.TileLarge android:id="@+id/ifl_tile_ig_version" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_enableSubIcon="visible" app:ifl_attr_ui_iconRes="@drawable/ifl_instagram" app:ifl_attr_ui_spaceBottom="visible" app:ifl_attr_ui_subIconRes="@drawable/ifl_copy" app:ifl_attr_ui_subtitleText="instagramVersionAndCodeBeHere" app:ifl_attr_ui_titleText="@string/ifl_a1_10" />
        <me.mamiiblt.instafel.ui.TileLarge android:id="@+id/ifl_tile_build_info" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_iconRes="@drawable/ifl_build_info" app:ifl_attr_ui_subtitleText="@string/ifl_a1_15" app:ifl_attr_ui_titleText="@string/ifl_a1_12" />

        <me.mamiiblt.instafel.ui.TileTitle android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_titleText="@string/ifl_a1_04" />
        <me.mamiiblt.instafel.ui.TileLarge android:id="@+id/ifl_tile_source_code" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_enableSubIcon="visible" app:ifl_attr_ui_iconPadding="4" app:ifl_attr_ui_iconRes="@drawable/ifl_github" app:ifl_attr_ui_spaceBottom="visible" app:ifl_attr_ui_subIconRes="@drawable/ifl_open_in_browser" app:ifl_attr_ui_subtitleText="github.com/mamiiblt/instafel" app:ifl_attr_ui_titleText="@string/ifl_a1_17" />
        <me.mamiiblt.instafel.ui.TileLarge android:id="@+id/ifl_tile_developer" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_enableSubIcon="visible" app:ifl_attr_ui_iconRes="@drawable/ifl_dev_circle" app:ifl_attr_ui_spaceBottom="visible" app:ifl_attr_ui_subIconRes="@drawable/ifl_open_in_browser" app:ifl_attr_ui_subtitleText="mamiiblt.me/about" app:ifl_attr_ui_titleText="@string/ifl_a1_05" />
        <me.mamiiblt.instafel.ui.TileLarge android:id="@+id/ifl_tile_contributors" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_iconRes="@drawable/ifl_contributors" app:ifl_attr_ui_spaceBottom="visible" app:ifl_attr_ui_subtitleText="@string/ifl_a1_06" app:ifl_attr_ui_titleText="@string/ifl_a10_01" />
        <me.mamiiblt.instafel.ui.TileLarge android:id="@+id/ifl_tile_translators" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" app:ifl_attr_ui_iconRes="@drawable/ifl_translate" app:ifl_attr_ui_subtitleText="@string/ifl_a1_11" app:ifl_attr_ui_titleText="@string/ifl_a10_02" />
    </me.mamiiblt.instafel.ui.PageContentArea>
</me.mamiiblt.instafel.ui.Page>