<?xml version="1.0" encoding="utf-8"?>
<me.mamiiblt.instafel.ui.Page
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mamiiblt.instafel.activity.crash_manager.ifl_a_crash_viewer">

    <me.mamiiblt.instafel.ui.PageTitle
        android:id="@+id/ifl_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ifl_attr_ui_titleText="@string/ifl_a8_01" />

    <me.mamiiblt.instafel.ui.PageContentArea
        android:id="@+id/ifl_page_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifl_page_title">

        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_crashviewer_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_copy"
            app:ifl_attr_ui_subtitleText="None"
            app:ifl_attr_ui_titleText="@string/ifl_a8_02" />

        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_crashviewer_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_spaceTop="visible"
            app:ifl_attr_ui_iconRes="@drawable/ifl_share"
            app:ifl_attr_ui_subtitleText="None"
            app:ifl_attr_ui_titleText="@string/ifl_a8_03" />

        <me.mamiiblt.instafel.ui.TileTitle
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:ifl_attr_ui_titleText="@string/ifl_a8_04"/>

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_crashviewer_aver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_enableIcon="gone"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="None"
            app:ifl_attr_ui_titleText="@string/ifl_a8_05" />

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_crashviewer_iflIgVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_enableIcon="gone"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_subtitleText="None"
            app:ifl_attr_ui_titleText="@string/ifl_a8_06" />

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_crashviewer_crashDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_enableIcon="gone"
            app:ifl_attr_ui_subtitleText="None"
            app:ifl_attr_ui_titleText="@string/ifl_a8_07" />

        <me.mamiiblt.instafel.ui.TileTitle
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:ifl_attr_ui_titleText="@string/ifl_a8_08"/>

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_crashviewer_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_enableSubIcon="visible"
            app:ifl_attr_ui_subIconRes="@drawable/ifl_copy"
            app:ifl_attr_ui_subtitleText="None"
            app:ifl_attr_ui_enableIcon="gone"
            app:ifl_attr_ui_titleText="@string/ifl_a8_09" />

        <me.mamiiblt.instafel.ui.TileLarge
            android:id="@+id/ifl_tile_crashviewer_stacktrace"
            app:ifl_attr_ui_enableSubIcon="visible"
            app:ifl_attr_ui_subIconRes="@drawable/ifl_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_enableIcon="gone"
            app:ifl_attr_ui_subtitleText="None"
            app:ifl_attr_ui_titleText="@string/ifl_a8_10" />
    </me.mamiiblt.instafel.ui.PageContentArea>

</me.mamiiblt.instafel.ui.Page>