<?xml version="1.0" encoding="utf-8"?>
<me.mamiiblt.instafel.ui.Page
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mamiiblt.instafel.activity.devmode.ifl_a_devmode">

    <me.mamiiblt.instafel.ui.PageTitle
        android:id="@+id/ifl_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ifl_attr_ui_titleText="@string/ifl_a0_01" />

    <me.mamiiblt.instafel.ui.PageContentArea
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifl_page_title">

        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_exp_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_export_devfile"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_titleText="@string/ifl_a4_01" />

        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_exp_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_import_devopt"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_titleText="@string/ifl_a4_02" />

        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_exp_develeov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_deleteov"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_titleText="@string/ifl_a4_03" />

        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_exp_analyzer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_backup_analyzer"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_titleText="@string/ifl_a4_17" />

        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_exp_comperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:ifl_attr_ui_iconRes="@drawable/ifl_backup_comp"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_titleText="@string/ifl_a11_62" />
    </me.mamiiblt.instafel.ui.PageContentArea>
</me.mamiiblt.instafel.ui.Page>