<?xml version="1.0" encoding="utf-8"?>
<me.mamiiblt.instafel.ui.Page
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mamiiblt.instafel.activity.library.ifl_a_library_menu">

    <me.mamiiblt.instafel.ui.PageTitle
        android:id="@+id/ifl_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ifl_attr_ui_titleText="@string/ifl_a0_04" />

    <me.mamiiblt.instafel.ui.PageContentArea
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifl_page_title">


        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_backup_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_library_backup"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_titleText="@string/ifl_a11_02" />

        <me.mamiiblt.instafel.ui.TileCompact
            android:id="@+id/ifl_tile_flag_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ifl_attr_ui_iconRes="@drawable/ifl_library_flags"
            app:ifl_attr_ui_spaceBottom="visible"
            app:ifl_attr_ui_titleText="@string/ifl_a11_01" />

    </me.mamiiblt.instafel.ui.PageContentArea>

</me.mamiiblt.instafel.ui.Page>
